--- a/tableorder/src/components/Modal/ItemCart/ItemCartDetailsStyle.css
+++ b/tableorder/src/components/Modal/ItemCart/ItemCartDetailsStyle.css
@@ -8,63 +8,51 @@
 }
 
 .cart-item-header {
-  flex: 0 50%;
+  flex: 0 0 50%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 0.25rem;
 }
 .cart-item-header h3 {
-  flex: 0 0 65%;
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* margin-left: 0.5rem; */
-
-  font-size: 1.2rem;
   font-weight: bold;
-  /* border: 1px solid red; */
+  padding: 0.25rem 0;
 }
 .cart-item-delete {
+  flex: 0 0 25%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.4rem 0.3rem;
-  color: #000;
-  font-weight: bold;
-  /* color: #fff; */
+  padding: 0.5rem 0;
   border-color: transparent;
   background-color: #f44336;
   border-radius: 0.25rem;
   transition: all 0.3s linear;
+  color: #000;
+  font-size: 1.2rem;
+  font-weight: bold;
+  line-height: 1;
   cursor: pointer;
 }
-
 .cart-item-delete .icon {
-  margin-right: 8px;
-  font-size: 0.9rem;
-  line-height: 1;
+  margin-right: 0.35rem;
 }
-.cart-item-delete span {
-  font-size: 0.9rem;
-  line-height: 1;
-}
-.cart-item-details {
-  flex: 0 50%;
-  display: flex;
-  justify-content: space-between;
 
+.cart-item-details {
+  flex: 0 0 50%;
+  justify-content: space-between;
   align-items: center;
-  padding: 0 0.25rem;
-  /* border: 1px solid blue; */
+  display: flex;
 }
 .cart-item-quantity {
-  flex: 0 0 65%;
-
+  flex: 1;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  /* border: 1px solid red; */
+  padding: 0.25rem 0;
 }
 .cart-item-quantity .minus,
 .cart-item-quantity .plus {
@@ -72,110 +60,101 @@
   justify-content: center;
   align-items: center;
   padding: 0.25rem;
-
   background-color: transparent;
   border-color: transparent;
-  /* border: 1px solid rgba(255, 255, 255, 0.5); */
   border-radius: 0.25rem;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   color: #000;
   cursor: pointer;
 }
 .cart-item-quantity span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0.25rem;
-  /* padding: 0.2rem 0.5rem; */
-  font-size: 1.2rem;
-  /* border: 1px solid red; */
-}
-.cart-item-quantity .minus:hover,
-.cart-item-quantity .plus:hover {
-  /* border: 1px solid #000; */
-  border-radius: 0.25rem;
+  width: 25px;
+  font-size: 1.1rem;
 }
 .cart-item-price {
-  /* flex: 1; */
+  flex: 0 0 25%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   font-weight: bold;
-  font-size: 1.2rem;
-
-  /* border: 1px solid red; */
+  font-size: 1.1rem;
 }
-
 @media screen and (max-width: 479px) {
   .cart-item-header h3 {
-    flex: 1;
-    font-size: 0.95rem;
+    font-size: 1rem;
+    /* font-size: 0.95rem; */
   }
   .cart-item-delete {
-    margin-right: 0;
-    padding: 0.25rem 0.2rem;
-  }
-  .cart-item-delete .icon {
-    margin-right: 4px;
-  }
-  .cart-item-delete span,
-  .cart-item-delete .icon {
+    flex: 0 0 30%;
+    padding: 0.25rem 0;
     font-size: 0.8rem;
   }
+  .cart-item-delete .icon {
+    margin-right: 0.25rem;
+  }
   .cart-item-quantity .minus,
-  .cart-item-quantity .plus,
+  .cart-item-quantity .plus {
+    font-size: 1rem;
+    /* font-size: 0.95rem; */
+  }
   .cart-item-quantity span {
     font-size: 1rem;
   }
   .cart-item-price {
-    /* margin-right: 0.2rem; */
-    margin-right: 0.35rem;
+    flex: 0 0 35%;
     font-size: 1rem;
   }
 }
 
 @media screen and (min-width: 480px) and (max-width: 767px) {
   .cart-item-header h3 {
-    font-size: 1rem;
+    font-size: 1.05rem;
   }
   .cart-item-delete {
-    margin-right: 0.4rem;
-    padding: 0.275rem 0.225rem;
-  }
-
-  .cart-item-delete .icon {
-    margin-right: 6px;
-  }
-  .cart-item-delete span,
-  .cart-item-delete .icon {
+    flex: 0 0 30%;
+    padding: 0.25rem 0;
     font-size: 0.85rem;
   }
+  .cart-item-delete .icon {
+    margin-right: 0.25rem;
+  }
   .cart-item-quantity .minus,
-  .cart-item-quantity .plus,
+  .cart-item-quantity .plus {
+    font-size: 1.05rem;
+  }
   .cart-item-quantity span {
     font-size: 1.05rem;
   }
   .cart-item-price {
-    margin-right: 0.4rem;
+    flex: 0 0 30%;
     font-size: 1.05rem;
   }
 }
+
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .cart-item-header h3 {
     font-size: 1.1rem;
   }
   .cart-item-delete {
-    margin-right: 0.5rem;
-    padding: 0.3rem 0.25rem;
-  }
-  .cart-item-delete span,
-  .cart-item-delete .icon {
+    flex: 0 0 25%;
     font-size: 0.9rem;
   }
+  .cart-item-delete .icon {
+    margin-right: 0.35rem;
+  }
   .cart-item-quantity .minus,
-  .cart-item-quantity .plus,
+  .cart-item-quantity .plus {
+    font-size: 1.1rem;
+  }
   .cart-item-quantity span {
     font-size: 1.1rem;
   }
   .cart-item-price {
-    margin-right: 0.5rem;
+    flex: 0 0 25%;
     font-size: 1.1rem;
   }
 }
@@ -184,20 +163,21 @@
     font-size: 1.2rem;
   }
   .cart-item-delete {
-    margin-right: 0.525rem;
-    padding: 0.325rem 0.275rem;
+    flex: 0 0 25%;
+    font-size: 0.95rem;
   }
-  .cart-item-delete span,
   .cart-item-delete .icon {
-    font-size: 1rem;
+    margin-right: 0.35rem;
   }
   .cart-item-quantity .minus,
-  .cart-item-quantity .plus,
+  .cart-item-quantity .plus {
+    font-size: 1.2rem;
+  }
   .cart-item-quantity span {
     font-size: 1.2rem;
   }
   .cart-item-price {
-    margin-right: 0.525rem;
+    flex: 0 0 25%;
     font-size: 1.2rem;
   }
 }
@@ -206,42 +186,45 @@
     font-size: 1.3rem;
   }
   .cart-item-delete {
-    margin-right: 0.55rem;
-    padding: 0.35rem 0.3rem;
+    flex: 0 0 20%;
+    font-size: 1rem;
   }
-  .cart-item-delete span,
   .cart-item-delete .icon {
-    font-size: 1.1rem;
+    margin-right: 0.45rem;
   }
   .cart-item-quantity .minus,
-  .cart-item-quantity .plus,
+  .cart-item-quantity .plus {
+    font-size: 1.3rem;
+  }
   .cart-item-quantity span {
     font-size: 1.3rem;
   }
   .cart-item-price {
-    margin-right: 0.55rem;
+    flex: 0 0 20%;
     font-size: 1.3rem;
   }
 }
+
 @media screen and (min-width: 1440px) {
   .cart-item-header h3 {
     font-size: 1.4rem;
   }
   .cart-item-delete {
-    margin-right: 0.575rem;
-    padding: 0.375rem 0.325rem;
+    flex: 0 0 20%;
+    font-size: 1.05rem;
   }
-  .cart-item-delete span,
   .cart-item-delete .icon {
-    font-size: 1.2rem;
+    margin-right: 0.45rem;
   }
   .cart-item-quantity .minus,
-  .cart-item-quantity .plus,
+  .cart-item-quantity .plus {
+    font-size: 1.4rem;
+  }
   .cart-item-quantity span {
     font-size: 1.4rem;
   }
   .cart-item-price {
-    margin-right: 0.575rem;
+    flex: 0 0 20%;
     font-size: 1.4rem;
   }
 }
