--- a/tableorder/src/components/Modal/ModalItems/OptionItemStyle.css
+++ b/tableorder/src/components/Modal/ModalItems/OptionItemStyle.css
@@ -4,27 +4,17 @@
   width: 100%;
   background-color: #fefefe;
 }
-
 .modal-item-details {
   flex: 1;
   display: grid;
-  /* grid-template-columns: repeat(5, 1fr); */
-  /* grid-template-rows: repeat(6, 1fr); */
-  /*10일때*/
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
   gap: 0.25rem;
   padding: 0.25rem;
   overflow: hidden;
-  /* border: 1px solid blue; */
 }
 .modal-menuItem {
-  grid-column: 1 / 3;
-  grid-row: 1 / 4;
-  /* grid-row: 1 / 3; */
-  /**/
   grid-column: 1 / 5;
-  /* grid-row: 1 / 6; */
   grid-row: 1 / 5;
   display: flex;
   justify-content: center;
@@ -36,25 +26,18 @@
 .single-img {
   width: 100%;
   height: 100%;
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
 }
+
 .modal-info {
-  grid-column: 3 / 6;
-  grid-row: 1 / 4;
-  /* grid-row: 1 / 3; */
-  /*10*/
   grid-column: 5 / 11;
-  /* grid-row: 1 / 6; */
   grid-row: 1 / 5;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-content: space-between;
-  /* border: 1px solid rgba(255, 255, 255, 0.5); */
-  overflow: hidden;
   overflow: auto;
   padding: 0.25rem;
-  /* border: 1px solid yellow; */
+  /* border: 1px solid red; */
 }
 .modal-item-title {
   flex: 1;
@@ -62,89 +45,70 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0.2rem;
-  margin-bottom: 0.25rem;
   /* border: 1px solid red; */
+  /* font-size: 0.8rem; */
 }
 .modal-item-title h3 {
+  flex-shrink: 0;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  /* margin-bottom: 0.25rem; */
-  padding: 0.2rem;
-  font-size: 1.3rem;
+  padding: 0.25rem;
   color: #000;
-  /* border: 1px solid red; */
+  /* margin-bottom: 0.2rem; */
+  /* border: 1px solid blue; */
 }
 .modal-item-title span {
+  flex-shrink: 0;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.2rem;
-  font-size: 1rem;
-  font-weight: bold;
+  padding: 0 0.25rem;
   color: #000;
   text-transform: uppercase;
+  font-weight: bold;
+  /* border: 1px solid blue; */
 }
 .drink-type {
-  /* flex: 0 0 30%; */
-  /* flex: 0 0 50%; */
-  flex: 0 0 40%;
-
+  flex-shrink: 0;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  /* border: 1px solid blue; */
+  /* border: 1px solid red; */
 }
 .hot-type,
 .iced-type {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0.3rem 1rem;
   background-color: transparent;
   border-color: transparent;
-  border-radius: 0.5rem;
-  font-size: 1rem;
   font-weight: bold;
   color: rgba(0, 0, 0, 0.5);
   text-transform: uppercase;
   letter-spacing: 0.05rem;
   cursor: pointer;
-  /* border: 1px solid red; */
+  padding: 0.25rem 0.5rem;
 }
-
 .hot-type:hover,
 .iced-type:hover {
-  color: #b0b0b0;
-  /* border: 1px solid rgb(176, 176, 176); */
-  /**/
   color: #000;
 }
 .active-hot.hot-type,
 .active-iced.iced-type {
-  color: #b0b0b0;
-  /* border: 1px solid rgb(176, 176, 176); */
-  /**/
+  /* color: #b0b0b0; */
   color: #000;
 }
-
-/*선택옵션*/
 .selected-items-info {
   grid-column: 1 / 11;
-  grid-row: 4 / 7;
-  /* grid-row: 3 / 7; */
-
-  /*10일때*/
-  /* grid-row: 6 / 11; */
   grid-row: 5 / 11;
   padding: 0.2rem;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 0.25rem;
   overflow: auto;
-  /* border: 1px solid yellow; */
-  /* border: 1px solid red; */
-  /* margin: 0.25rem 0; */
+  border: 1px solid red;
 }
 .drink-type-warning {
   height: 100%;
@@ -153,19 +117,14 @@
   align-items: center;
   font-size: 1.1rem;
   font-weight: bold;
-  /* margin-top: 1rem; */
-  /* border: 1px solid blue; */
 }
-
 .items-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* padding: 0.15rem; */
   padding: 0.25rem;
-  margin: 0 0.25rem;
-  /* border: 1px solid green; */
+  border: 1px solid blue;
 }
 .size-selection-row,
 .quantity-selection-row,
@@ -176,17 +135,16 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 0.25rem;
-  padding: 0.25rem;
+  padding: 0.4rem 0.25rem;
   font-weight: bold;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.9);
 }
 .size-selection-row h4,
 .quantity-selection-row h4 {
   margin-bottom: 0.25rem;
   padding: 0.25rem;
-  font-size: 1.15rem;
+  font-size: 1.1rem;
   color: #000;
-  /* border: 1px solid blue; */
+  /* border: 1px solid red; */
 }
 .btn-row {
   width: 100%;
@@ -194,15 +152,13 @@
   justify-content: space-evenly;
   align-items: center;
   padding: 0.25rem;
-  /* padding: 0.1rem; */
-  /* border: 1px solid blue; */
 }
 .btn-row .coffee-size {
   flex: 1;
   padding: 0.25rem;
   background-color: transparent;
   border-color: transparent;
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: bold;
   border-radius: 0.25rem;
   color: rgba(0, 0, 0, 0.5);
@@ -224,23 +180,19 @@
   padding: 0.25rem;
   background-color: transparent;
   border-color: transparent;
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: bold;
   color: #000;
   cursor: pointer;
-  /* border: 1px solid red; */
 }
-
 .btn-row span {
-  width: 30px;
+  width: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* padding: 0 0.25rem; */
   padding: 0.25rem;
-  font-size: 1rem;
+  font-size: 1.1rem;
   color: #000;
-  /* border: 1px solid red; */
 }
 .coffee-row-header {
   display: flex;
@@ -248,8 +200,6 @@
   align-items: center;
   margin-bottom: 0.25rem;
   padding: 0.25rem;
-
-  /* border: 1px solid purple; */
 }
 .coffee-row-header h4 {
   padding: 0.25rem;
@@ -295,41 +245,36 @@
     grid-row: 5 / 11;
   }
   .modal-item-title h3 {
-    font-size: 1.05rem;
     font-size: 1rem;
-
-    /* border: 1px solid red; */
   }
   .modal-item-title span {
     font-size: 0.85rem;
   }
   .hot-type,
   .iced-type {
-    padding: 0.3rem 0.8rem;
     font-size: 0.9rem;
+  }
+  .drink-type-warning {
+    font-size: 1rem;
   }
   .size-selection-row,
   .quantity-selection-row,
   .coffee-row {
-    padding: 0.3rem 0.25rem;
-    /* border: 1px solid blue; */
-  }
-  .drink-type-warning {
-    font-size: 1rem;
+    padding: 0.35rem 0.25rem;
   }
   .size-selection-row h4,
   .quantity-selection-row h4 {
     font-size: 1rem;
   }
   .btn-row .coffee-size {
-    font-size: 0.9rem;
+    font-size: 1rem;
   }
   .btn-row .minus,
   .btn-row .plus {
-    font-size: 0.9rem;
+    font-size: 1rem;
   }
   .btn-row span {
-    font-size: 0.9rem;
+    font-size: 1rem;
   }
   .coffee-row-header h4 {
     font-size: 1rem;
@@ -353,39 +298,37 @@
     grid-row: 5 / 11;
   }
   .modal-item-title h3 {
-    font-size: 1.1rem;
+    font-size: 1.05rem;
   }
   .modal-item-title span {
-    /* font-size: 0.85rem; */
-    font-size: 0.875rem;
     font-size: 0.9rem;
   }
   .hot-type,
   .iced-type {
-    padding: 0.35rem 0.85rem;
-    font-size: 0.9rem;
+    font-size: 0.95rem;
+  }
+  .drink-type-warning {
+    font-size: 1.05rem;
   }
   .size-selection-row,
   .quantity-selection-row,
   .coffee-row {
     padding: 0.35rem 0.25rem;
   }
-  .drink-type-warning {
-    font-size: 1.05rem;
-  }
   .size-selection-row h4,
   .quantity-selection-row h4 {
     font-size: 1.05rem;
   }
   .btn-row .coffee-size {
-    font-size: 0.95rem;
+    font-size: 1.05rem;
   }
   .btn-row .minus,
   .btn-row .plus {
-    font-size: 0.95rem;
+    font-size: 1.05rem;
   }
+
   .btn-row span {
-    font-size: 0.95rem;
+    font-size: 1.05rem;
   }
   .coffee-row-header h4 {
     font-size: 1.05rem;
@@ -397,42 +340,39 @@
     font-size: 1.15rem;
   }
 }
-
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .modal-item-title h3 {
     font-size: 1.2rem;
   }
   .modal-item-title span {
-    font-size: 0.9rem;
     font-size: 0.95rem;
   }
   .hot-type,
   .iced-type {
-    /* padding: 0.5rem 1rem; */
-    padding: 0.4rem 0.9rem;
     font-size: 1rem;
+  }
+  .drink-type-warning {
+    font-size: 1.1rem;
   }
   .size-selection-row,
   .quantity-selection-row,
   .coffee-row {
     padding: 0.4rem 0.25rem;
   }
-  .drink-type-warning {
-    font-size: 1.1rem;
-  }
   .size-selection-row h4,
   .quantity-selection-row h4 {
     font-size: 1.1rem;
   }
   .btn-row .coffee-size {
-    font-size: 1rem;
+    font-size: 1.1rem;
   }
   .btn-row .minus,
   .btn-row .plus {
-    font-size: 1rem;
+    font-size: 1.1rem;
   }
+
   .btn-row span {
-    font-size: 1rem;
+    font-size: 1.1rem;
   }
   .coffee-row-header h4 {
     font-size: 1.1rem;
@@ -444,47 +384,44 @@
     font-size: 1.2rem;
   }
 }
-
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .modal-item-title h3 {
     font-size: 1.3rem;
   }
   .modal-item-title span {
-    font-size: 0.95rem;
     font-size: 1rem;
   }
   .hot-type,
   .iced-type {
-    padding: 0.45rem 0.95rem;
     font-size: 1.1rem;
+  }
+  .drink-type-warning {
+    font-size: 1.2rem;
   }
   .size-selection-row,
   .quantity-selection-row,
   .coffee-row {
-    padding: 0.45rem 0.25rem;
-  }
-  .drink-type-warning {
-    font-size: 1.2rem;
+    padding: 0.4rem 0.25rem;
   }
   .size-selection-row h4,
   .quantity-selection-row h4 {
     font-size: 1.2rem;
   }
   .btn-row .coffee-size {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
   }
   .btn-row .minus,
   .btn-row .plus {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
   }
   .btn-row span {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
   }
   .coffee-row-header h4 {
     font-size: 1.2rem;
   }
   .coffee-row-header p {
-    font-size: 1rem;
+    font-size: 0.95rem;
   }
   .item-total {
     font-size: 1.3rem;
@@ -495,42 +432,40 @@
     font-size: 1.4rem;
   }
   .modal-item-title span {
-    font-size: 1rem;
     font-size: 1.05rem;
   }
   .hot-type,
   .iced-type {
-    padding: 0.5rem 1rem;
-
     font-size: 1.2rem;
+  }
+  .drink-type-warning {
+    font-size: 1.3rem;
   }
   .size-selection-row,
   .quantity-selection-row,
   .coffee-row {
-    padding: 0.5rem 1rem;
-  }
-  .drink-type-warning {
-    font-size: 1.3rem;
+    padding: 0.45rem 0.25rem;
   }
   .size-selection-row h4,
   .quantity-selection-row h4 {
     font-size: 1.3rem;
   }
   .btn-row .coffee-size {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
   }
   .btn-row .minus,
   .btn-row .plus {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
   }
+
   .btn-row span {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
   }
   .coffee-row-header h4 {
     font-size: 1.3rem;
   }
   .coffee-row-header p {
-    font-size: 1.1rem;
+    font-size: 1rem;
   }
   .item-total {
     font-size: 1.4rem;
@@ -541,42 +476,40 @@
     font-size: 1.5rem;
   }
   .modal-item-title span {
-    font-size: 1.05rem;
     font-size: 1.1rem;
   }
   .hot-type,
   .iced-type {
-    /* padding: 0.5rem 1rem; */
-    padding: 0.55rem 1.05rem;
     font-size: 1.3rem;
+  }
+  .drink-type-warning {
+    font-size: 1.4rem;
   }
   .size-selection-row,
   .quantity-selection-row,
   .coffee-row {
-    padding: 0.55rem 0.25rem;
-  }
-  .drink-type-warning {
-    font-size: 1.4rem;
+    padding: 0.45rem 0.25rem;
   }
   .size-selection-row h4,
   .quantity-selection-row h4 {
     font-size: 1.4rem;
   }
   .btn-row .coffee-size {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
   }
   .btn-row .minus,
   .btn-row .plus {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
   }
+
   .btn-row span {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
   }
   .coffee-row-header h4 {
     font-size: 1.4rem;
   }
   .coffee-row-header p {
-    font-size: 1.2rem;
+    font-size: 1.05rem;
   }
   .item-total {
     font-size: 1.5rem;
